Prevent widgets from getting squished too easily

--- a/styles/widgets/_widget-board.scss
+++ b/styles/widgets/_widget-board.scss
@@ -12,7 +12,6 @@
   flex-basis: 0;
   display: flex;
   flex-direction: column;
-  min-width: 200px;
   margin: 0 10px;
   margin-bottom: 20px;
   border-radius: 20px;
