--- a/styles/widgets/_widget.scss
+++ b/styles/widgets/_widget.scss
@@ -1,7 +1,7 @@
 .widget {
   display: inline-block;
   position: relative;
-  min-width: 100px;
+  min-width: 240px;
   min-height: 100px;
   width: 100%;
   margin: 10px 0;
